assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Playfair+Display:wght@500&display=swap');

* {
    padding: 0;
    margin: 0;
    border: none;
    scroll-behavior: smooth;
    overflow-x: hidden;
}

/*fonts*/
h1,
h2,
h3 {
    font-family: "Playfair Display", sans-serif;
}

p,
span,
table {
    font-family: Lato, sans-serif;
}

/*global style*/
hr {
    border: 1px solid black;
}

table {
    margin-left: auto;
    margin-right: auto;
    border: 1px solid black;
}

tr:nth-child(odd) {
    background-color: #F4FCF2;
}

label {
    display: block;
}

textarea {
    display: block;
    width: 400px;
}

/*hamburger-menu*/
.hamburger-menu {
    background: rgba(0, 0, 0, .9);
    position: fixed;
    text-align: center;
    z-index: 5;
    width: 100%;
}

.hamburger-menu #nav-bar {
    display: none;
}

.hamburger-menu a {
    color: #fbfdfa;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    display: block;
}

.hamburger-menu a.icon {
    background: black;
    display: block;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 5;
}

.hamburger-menu a:hover {
    background-color: #636C87;
    color: #fbfdfa;
}

#desktop-menu {
    position: fixed;
    top: 0;
    text-align: center;
    display: none;
    width: 100%;
    height: 35px;
    background-color: rgba(0, 0, 0, .8);
    color: #fbfdfa;
    z-index: 5;
}

#desktop-menu li {
    display: inline-block;
    min-width: 60px;
    padding: 10px;
}

#desktop-menu li a {
    color: #fbfdfa;
    text-decoration: none;
}

#desktop-menu li:hover {
    background-color: #636C87;
}

/*sections*/
.home {
    height: 100vh;
    width: 100%;
    background: url('../images/IMG_03971.jpg') no-repeat center center / cover;
    position: relative;
}

.cover-text {
    position: absolute;
}

.home h1,
.home p {
    padding: 20px;
    background-color: #252a3bd0;
    color: #fbfdfa;
}

.portfolio {
    text-align: center;
    padding-top: 25px;
    background-color: #b2c9ac;
    color: black;
}

.portfolio a {
    text-decoration: none;
    color: black;
}

.video {
    padding: 20px 0;
}

.about-me {
    text-align: center;
    padding: 25px 0;
    background-color: #657D5F;
    color: #fbfdfa;
}

.pricing {
    text-align: center;
    padding: 25px 0;
    background-color: #9CB097;
    color: black;
}

.contact {
    height: 100vh;
    text-align: center;
    padding: 25px 0;
    background-color: #657D5F;
    color: #fbfdfa;
}

.contact a {
    text-decoration: none;
    color: #fbfdfa;
}

/*contact form*/

.contact-form {
    color: #fbfdfa;
    background-color: rgba(0, 0, 0, .8);
    max-width: 400px;
    position: relative;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 30px;
    bottom: -35%
}

.contact-form>h2 {
    color: #fbfdfa;
    margin-bottom: 20px;
}

.text-input {
    background: transparent;
    color: #fbfdfa;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #fbfdfa;
    border-radius: 2px;
}

.text-input:hover {
    border-color: #657D5F;
}

.buttons {
    display: flex;
    text-align: center;
    flex-direction: row;
}

.contact-me {
    margin-top: 20px;
    margin-left: 10px;
    border-radius: 2px;
    padding: 15px 32px 15px 32px;
    text-align: center;
    font-size: 100%;
    background-color: #657D5F;
    color: black;
    display: block;
}

.contact-me:hover {
    background-color: #fbfdfa;
    color: #657D5F;
}

.footer {
    display: flex;
    flex-direction: row;
    position: fixed;
    width: 100%;
    bottom: 0;
    text-align: center;
    background-color: rgba(0, 0, 0, .8);
    color: #fbfdfa;
}

.socials {
    margin-left: auto;
    margin-right: auto;
    width: 170px;
}

.footer a {
    text-decoration-line: none;
    color: #fbfdfa;
}

.socials>li {
    display: inline;
    margin: 10px;
}

/*responsive layout

phone screen layout*/
@media screen and (max-width: 480px) {
    .video {
        width: 287px;
        height: 159px;
    }

    h1,
    h2 {
        font-size: 208%;
    }

    h3 {
        font-size: 138%;
    }

    p,
    table {
        font-size: 100%;
    }

    .cover-text {
        width: 208px;
        height: 490px;
        bottom: -246px;
        left: 14px;
    }

    #nav-bar {
        font-size: 150%;
    }

    .about-me h2,
    .pricing h2,
    .contact h2,
    table,
    td {
        padding: 10px;
    }

    .about-me p,
    .contact p {
        padding: 20px 40px;
    }

    .footer {
        height: 15px;
        padding: 3px 15px;
        font-size: 80%;
    }

    .copyright {
        margin-right: 30px;
    }

    .socials {
        width: 80px;
    }

    .socials>li {
        margin: 2px;
    }

    .contact-form {
        max-width: 270px;
        bottom: -38%
    }

    textarea {
        width: 270px;
    }
}

/*tablet screen layout*/
@media screen and (min-width: 481px) and (max-width: 768px) {
    .video {
        width: 452px;
        height: 254px;
    }

    h1,
    h2 {
        font-size: 226%;
    }

    h3 {
        font-size: 200%;
    }

    p,
    table {
        font-size: 115%;
    }

    .cover-text {
        width: 313px;
        height: 80px;
        bottom: 130px;
        left: 30px;
    }

    #nav-bar {
        font-size: 150%;
    }

    .about-me h2,
    .pricing h2,
    .contact h2,
    table,
    td {
        padding: 20px;
    }

    .about-me p,
    .contact p {
        padding: 20px 45px;
    }

    .footer {
        height: 14px;
        padding: 3px 15px;
        font-size: 80%;
    }

    .footer span {
        margin-right: 30px;
    }
}

/*laptop screen layout*/
@media screen and (min-width: 769px) and (max-width: 1024px) {
    .hamburger-menu {
        display: none;
    }

    #desktop-menu {
        display: block;
    }

    .video {
        width: 555px;
        height: 312px;
    }

    h1,
    h2 {
        font-size: 328%;
    }

    h3 {
        font-size: 200%;
    }

    p,
    table {
        font-size: 160%;
    }

    .cover-text {
        width: 436px;
        height: 200px;
        bottom: 70px;
        left: 75px;
    }

    #nav-bar {
        font-size: 150%;
    }

    .about-me h2,
    .pricing h2,
    .contact h2,
    table,
    td {
        padding: 20px;
    }

    .about-me p,
    .contact p {
        padding: 20px 150px;
    }

    .footer {
        height: 14px;
        padding: 3px 15px;
        font-size: 80%;
    }

    .footer span {
        margin-right: 30px;
    }
}

/*desktop screen layout*/
@media screen and (min-width: 1025px) and (max-width: 1200px) {
    .hamburger-menu {
        display: none;
    }

    #desktop-menu {
        display: block;
    }

    .video {
        width: 470px;
        height: 264px;
        padding: 20px 14px;
    }

    h1,
    h2 {
        font-size: 328%;
    }

    h3 {
        font-size: 200%;
    }

    p,
    table {
        font-size: 160%;
    }

    .cover-text {
        width: 436px;
        height: 200px;
        bottom: 80px;
        left: 75px;
    }

    #nav-bar {
        font-size: 150%;
    }

    .about-me h2,
    .pricing h2,
    .contact h2,
    table,
    td {
        padding: 20px;
    }

    .about-me p,
    .contact p {
        padding: 20px 150px;
    }

    .footer {
        height: 16px;
        padding: 3px 15px;
        font-size: 90%;
    }

    .footer span {
        margin-right: 30px;
    }
}

/*tv screen layout*/
@media screen and (min-width: 1201px) {
    .hamburger-menu {
        display: none;
    }

    #desktop-menu {
        display: block;
    }

    .video {
        width: 480px;
        height: 270px;
        padding: 25px 30px;
    }

    h1,
    h2 {
        font-size: 328%;
    }

    h3 {
        font-size: 200%;
    }

    p,
    table {
        font-size: 160%;
    }

    .cover-text {
        width: 436px;
        height: 200px;
        bottom: 100px;
        left: 75px;
    }

    #nav-bar {
        font-size: 150%;
    }

    .about-me h2,
    .pricing h2,
    .contact h2,
    table,
    td {
        padding: 20px;
    }

    .about-me p,
    .contact p {
        padding: 20px 150px;
    }

    .footer {
        height: 20px;
        padding: 5px 15px;
        font-size: 120%;
    }

    .footer span {
        margin-right: 60px;
        margin-left: 30px;
    }
}

